--- a/.env.dev
+++ b/.env.dev
@@ -1,9 +1,9 @@
 GRAFANA_USERNAME=admin
-GRAFANA_PASSWORD=admin
+GRAFANA_PASSWORD=Mysecret!
 
-POSTGRES_USER=admin
-POSTGRES_PASSWORD=admin
-
-INFLUXDB_DB=influx
-INFLUXDB_ADMIN_USER=admin
-INFLUXDB_ADMIN_PASSWORD=admin
+DOCKER_INFLUXDB_INIT_USERNAME=admin
+DOCKER_INFLUXDB_INIT_PASSWORD=Mysecret!
+DOCKER_INFLUXDB_INIT_ORG=myorg
+DOCKER_INFLUXDB_INIT_BUCKET=mybucket
+DOCKER_INFLUXDB_INIT_RETENTION=0
+DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=mydevtoken
