--- a/ccres_api/.pre-commit-config.yaml
+++ b/ccres_api/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: '^docs/|/migrations/'
+exclude: "^docs/|/migrations/"
 default_stages: [commit]
 
 repos:
@@ -21,8 +21,8 @@ repos:
     rev: v3.0.0-alpha.9-for-vscode
     hooks:
       - id: prettier
-        args: ['--tab-width', '2', '--single-quote']
-        exclude: 'ccres_api/templates/'
+        args: ["--tab-width", "2", "--single-quote"]
+        exclude: "backend/templates/"
 
   - repo: https://github.com/adamchainz/django-upgrade
     rev: "1.13.0"
