feat: Add Grafana contact creation on contact creation

--- a/local.yml
+++ b/local.yml
@@ -76,6 +76,10 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=postgres_django
       - POSTGRES_PORT=${POSTGRES_DJANGO_PORT}
+      - DJANGO_GRAFANA_API_URL=http://grafana:${GRAFANA_PORT}/api
+      - DJANGO_GRAFANA_AUTH_USERNAME=${GRAFANA_USERNAME}
+      - DJANGO_GRAFANA_AUTH_PASSWORD=${GRAFANA_PASSWORD}
+      - DJANGO_GRAFANA_AUTH_TOKEN=
       # - DJANGO_SECRET_KEY=${DJANGO_SECRET_KEY}
       # - DJANGO_ALLOWED_HOSTS=${DJANGO_ALLOWED_HOSTS}
       # - DJANGO_SECURE_SSL_REDIRECT=${DJANGO_SECURE_SSL_REDIRECT}
