feat: Add pygraphviz dependency

--- a/containers/ccres_api/Dockerfile
+++ b/containers/ccres_api/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.10
 
+RUN apt update
+RUN apt install -y graphviz graphviz-dev
+RUN pip install pygraphviz
+
 COPY ../ccres_api/requirements/ /requirements/
 
 RUN pip install -r /requirements/local.txt
