--- a/.env.local
+++ b/.env.local
@@ -38,6 +38,11 @@ POSTGRES_KEYCLOAK_DB=postgres_keycloak_db
 
 
 # DJANGO
+# To create superuser programmaticaly with createsuperuser --noinput
+DJANGO_SUPERUSER_USERNAME=root 
+DJANGO_SUPERUSER_PASSWORD=root 
+DJANGO_SUPERUSER_EMAIL=root@root.fr
+
 SOCIAL_AUTH_LOGIN_REDIRECT_URL="http://localhost:5173/"
 SOCIAL_AUTH_KEYCLOAK_REALM="test"
 SOCIAL_AUTH_KEYCLOAK_DOMAIN="http://172.25.0.13:8080"
